# zelutil

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  bootstrap-zel.py  dev-install.py  install.py  pyproject.toml
src/zelcandy/: cli.py  install.py  paths.py  registry.py
src/zelcandy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/zelcandy/data/: __init__.py  zel-modules.json
src/zelutil/: __init__.py  cli.py  install.py
src/zelutil/commands/: __init__.py  manage_commands.py  module_commands.py
src/zelutil/core/: __init__.py  installer.py  registry.py  updater.py
src/zelutil/data/: __init__.py  zel-modules.json
src/zelutil/utils/: __init__.py  config.py  install.py  integration.py  state.py
