[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zelutil"
version = "1.0.0"
description = "Shared configuration and path management for Zel CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Zeldean" }
]

dependencies = [
  "click>=8.1"
]

[project.scripts]
zelutil = "zelutil.cli:util"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
zelutil = ["data/*.json"]
